[package]
name = "simkv"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simkv-cli"
path = "src/cli.rs"


[[bin]]
name = "simkv-server"
path = "src/main.rs"

[dependencies]
crc = "3.2.1"
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
bytes = "1"
regex = "1.11.1"
chrono = "0.4.40"
config-file = "0.2.3"
serde = {version = "1.0.219", features=["derive"]}

